[project]
name = "webauthn-test-vectors"
description = "Scripts for generating WebAuthn test vectors"
requires-python = ">=3.10, <4"

[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
asn1 = "^3.0.1"
cryptography = "^44.0.3"
# Branch "cose-ed448" of https://github.com/Yubico/python-fido2.git as of 2025-05-06
fido2 = {git = "https://github.com/Yubico/python-fido2.git", rev = "2e89e454980ceb83744aa639fceac695cfa285e7"}

[build-system]
requires = ["poetry-core>=2.0"]
build-backend = "poetry.core.masonry.api"
